loader-fixes
1) added stylized film reel for spinner
2) changed z-index in css for other parts for correct overlapping

--- a/src/sass/components/_mw-movie.scss
+++ b/src/sass/components/_mw-movie.scss
@@ -12,6 +12,8 @@
     background-color: #FFF;
     border: none;
     // border-radius: 10px;
+
+    z-index: 150;
 }
 .mw-movie__btn-close {
     position: absolute;
