--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -8,6 +8,7 @@
     background-color: rgba(0, 0, 0, 0.56);
     color: $white;
     position: relative;
+    z-index: 100;
 }
 
 .header__img {
